13806
{code}
% scalac case class Test(private[this] val a:String)
a.scala:1: error: wrong number of arguments for <none>: (String)Test
case class Test(private[this] val a:String)
           ^
{code}

See my comments on SI-1373.
